First version of basic 'filter' function on Admin (plus fixed header for legibility)

--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -1,6 +1,6 @@
 @font-face{
 	font-family: Din;
-	font-weight: 100;/*lighter;*/
+	font-weight: lighter;
 	src: url("../fonts/DIN/DINNeuzeitGroteskStd-Light.otf") format("opentype");
 }
 @font-face{
@@ -34,7 +34,6 @@ body{
 }
 .container{
 	height:100%;
-	margin-top:27px;
 	margin-left:0px;
 	margin-right:0px;
 }
@@ -260,17 +259,70 @@ body{
 	pointer-events:none;
 }
 .headerrow{
-	margin-bottom:29px;
-	margin-left:14px;
+	padding-top:27px;
+    padding-bottom: 29px;
+    padding-left: 14px;
+    width:100%;
 	overflow:hidden;
 	min-width:940px;
+	z-index: 10;
+	position: absolute;
+    height: 60px;
+    background: white;
 }
+
 .header{
 	font-family:DinPro;
 	font-size:18pt;
 	letter-spacing:2px;
 	text-transform:uppercase;
 }
+
+.searchbar {
+	font-family:DinPro;
+	font-size:13pt;
+	font-weight: normal;
+	letter-spacing:1px;
+	font-weight: bold;
+	margin-top: 10px;
+    height: 30px;
+    background-color: #eee;
+    padding: 5px;
+    float: left;
+    min-width: 945px;
+	/* This is a glitch in the matrix.*/
+}
+
+#searchtext {
+	float: left; 
+	margin: 0px 10px 0px 20px;
+	line-height: 24px;
+}
+
+#searchinfo {
+	float: left;
+    text-transform: none;
+    letter-spacing: normal;
+    font-weight: lighter;
+    font-family: DinPro;
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 24px;
+}
+
+#searchInput {
+	float: left;
+    /*margin: 0px 20px 0px 0px;*/
+    font-family: DinPro;
+    font-weight: 500;
+    height: 18px;
+    font-size: 16px;
+}
+
+#pubsubspacer {
+	height: 126px;
+}
+
 #clientdataheader{
 	margin-right:144px;
 	margin-left:6px;
